--- a/pages/login/login.wxml
+++ b/pages/login/login.wxml
@@ -1,32 +1,30 @@
 <scroll-view scroll-y class="scrollPage">
-      <view class='png'>
-        <image src='https://xwkj.obs.cn-north-4.myhuaweicloud.com/loginbg.jpg' mode='widthFix'></image>
-      </view>
-      <view class='login-area'>
-          <text class='text-green titie'>登录</text>
-            <form report-submit="true" >
-              <view class="cu-form-group margin-top">
-                <text class="icon cuIcon-myfill text-green"></text>
-                <input name="account" value="{{ account }}" placeholder='学号/工号' bindinput="accountinp"></input>
-              </view>
-              <view class="cu-form-group">
-                <text class="icon cuIcon-goodsfill text-green"></text>
-                <input style="display: inline-block;height: 90rpx;line-height: 90rpx;" name="password" value="{{ password }}" type='password' placeholder='密码' bindinput="accountpwd"></input>
-              </view>
-              <view class='zdy-little-font'>
-                  <text class="text-green">忘记密码请联系管理员</text>
-              </view>
-              <view class="flex flex-direction margin-top">
-                <button  class="cu-btn bg-green lg" bindtap="login1">登录</button>
-              </view>
-              <view class='zdy-littl-footer'>
+	<view class='png'>
+		<image src='https://xwkj.obs.cn-north-4.myhuaweicloud.com/loginbg.jpg' mode='widthFix'></image>
+	</view>
+	<view class='login-area'>
+		<text class='text-green titie'>登录</text>
+		<form report-submit="true">
+			<view class="cu-form-group margin-top">
+				<text class="icon cuIcon-myfill text-green"></text>
+				<input name="account" value="{{ account }}" placeholder='学号/工号' bindinput="accountinp"></input>
+			</view>
+			<view class="cu-form-group">
+				<text class="icon cuIcon-goodsfill text-green"></text>
+				<input style="display: inline-block;height: 90rpx;line-height: 90rpx;" name="password" value="{{ password }}" type='password'
+				 placeholder='密码' bindinput="accountpwd"></input>
+			</view>
+			<view class='zdy-little-font'>
+				<text class="text-green">忘记密码请联系管理员</text>
+			</view>
+			<view class="flex flex-direction margin-top">
+				<button class="cu-btn bg-green lg" bindtap="login1">登录</button>
+			</view>
+			<!-- <view class='zdy-littl-footer'>
                 <text class="text-orange">温馨提示 : </text>
                 <text class="text-grey">账号为学(工)号，初始密码手机后六位</text>
-              </view>
-            </form>
-      </view>
- 
+              </view> -->
+		</form>
+	</view>
+
 </scroll-view>
-
-
-
