--- a/pages/remotedooropen/remotedooropen.wxss
+++ b/pages/remotedooropen/remotedooropen.wxss
@@ -28,35 +28,24 @@
 	position: relative;
 	margin-bottom: 25rpx;
 }
+.myscroll .list1 {
+	padding: 10rpx 20rpx;
+}
 .myscroll .list1 text{
+	display: block;
+	width: 50%;
+	text-align: left;
 	line-height: 50rpx;
+}
+.myscroll .list1 .mytime {
+	width: 100%;
+	text-align: left;
 }
 .myscroll .list .top {
 	font-weight: 550;
 	align-items: center;
 	margin-bottom: 45rpx;
 }
-
-/* .myscroll .list::before,
-.myscroll .list::after{
-	left: 25%;
-	content: '';
-	width: 30rpx;
-	height: 30rpx;
-	z-index: 1000;
-	background: #e8e8e8;
-	position: absolute;
-	margin-top: -40rpx;
-	transform: rotate(45deg);
-	border-right: 1rpx solid rgba(243, 243, 243);
-	border-bottom: 1rpx solid rgba(243, 243, 243);
-}
-.myscroll .list::after {
-	border: 0rpx;
-	margin-top: 130rpx;
-	border-top: 1rpx solid rgba(243, 243, 243);
-	border-left: 1rpx solid rgba(243, 243, 243);
-} */
 .myscroll .list .left {
 	width: 120rpx;
 	height: 120rpx;
@@ -72,4 +61,11 @@
 	width: fit-content;
 	margin-top: 0rpx;
 	font-weight: 600;
+}
+.myfooter {
+	width: 100%;
+	position: fixed;
+	text-align: center;
+	font-size: 24rpx;
+	bottom: 45rpx;
 }
