--- a/pages/appointment/appointment.wxml
+++ b/pages/appointment/appointment.wxml
@@ -111,7 +111,7 @@
 		<view class="propTop clearfix">
 			<text class="fl noBtn" bindtap="noBtnTime1">取消</text>
 			<!-- 第几周 -->
-			<text>{{mytime1}}</text>
+			<text>{{mytime}}</text>
 			<text class="fr okBtn" bindtap="okBtnTime1">确定</text>
 		</view>
 		<picker-view indicator-style="height: 50px;" style="width: 100%; height: 300px;" value="{{value1}}" bindchange="bindChange1">
