--- a/pages/remotedooropen/remotedooropen.wxml
+++ b/pages/remotedooropen/remotedooropen.wxml
@@ -9,7 +9,7 @@
 		</block>
 	</view>
 	<scroll-view style="height: 80vh;" class="myscroll" scroll-y="true" bindscrolltolower="chudi">
-		<swiper style="height:{{  currettab === 0 ? (200*remoteList.length)+'rpx' : (historylist.length > 0 ? (265*historylist.length)+'rpx' : '700rpx') }}"
+		<swiper style="height:{{  currettab === 0 ? (200*remoteList.length)+'rpx' : (historylist.length > 0 ? ( historylist.length > 25 ? (170*historylist.length)+'rpx' : (230*historylist.length)+'rpx'): '700rpx') }}"
 		 bindchange="bindchange" current="{{ currettab }}">
 			<!-- 开门列表 -->
 			<swiper-item>
@@ -32,12 +32,12 @@
 					<view class="list list1">
 						<text class="mytime">{{ item.addTime }}</text>
 						<view class="flex-row">
-							<text>操作人员：{{ item.addUserName }}</text>
-							<text>操作房间：{{ item.labName }}</text>
+							<text>人员：{{ item.addUserName }}</text>
+							<text>房间：{{ item.labName }}</text>
 						</view>
 						<view class="flex-row">
-							<text>操作种类：{{ item.kindName }}</text>
-							<text>操作方法：{{ item.kindName }}</text>
+							<text>种类：{{ item.kindName }}</text>
+							<text>方法：{{ item.kindName }}</text>
 						</view>
 					</view>
 				</block>
